# onyx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
onyx/: Cargo.toml
onyx-agent/: Cargo.toml
onyx-agent/src/: chat.rs  lib.rs
onyx-core/: Cargo.toml
onyx-core/src/: config.rs  lib.rs  schema.rs  types.rs
onyx-term/: Cargo.toml
onyx-tui/: Cargo.toml
onyx-tui/src/: config_editor.rs  cursor.rs  lib.rs  scroll.rs  text_input.rs  theme.rs  ui.rs  widgets.rs
onyx/src/: main.rs
src/: ai.rs  display.rs  fs.rs  main.rs  settings.rs
src/agent/: chat.rs  mod.rs
src/core/: config.rs  types.rs
src/interface/: ui.rs
