[package]
name = "onyx"
version = "0.1.0"
edition = "2024"
authors = ["Iskaa303"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
