[package]
name = "onyx"
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["Iskaa303"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
rig-core = "0.22.0"
rig-qdrant = "0.1.27"
qdrant-client = "1.15.0"
reqwest = "0.12.24"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
