[workspace]
members = [
    "onyx-core",
    "onyx-agent",
    "onyx-tui",
    "onyx",
]
default-members = ["onyx"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.1"
edition = "2024"
authors = ["Iskaa303"]
license = "MIT"
repository = "https://github.com/Iskaa303/onyx"

[workspace.dependencies]
# Workspace crates
onyx-core = { path = "onyx-core" }
onyx-agent = { path = "onyx-agent" }
onyx-tui = { path = "onyx-tui" }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Terminal UI
ratatui = "0.29.0"
crossterm = "0.29.0"

# AI frameworks
rig-core = "0.23.1"
rig-qdrant = "0.1.29"
qdrant-client = "1.15.0"

# HTTP client
reqwest = "0.12.24"

# Error handling - prefer thiserror for library errors, eyre for applications
eyre = "0.6.12"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
dirs = "6.0.0"
chrono = "0.4"
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
